# DoctorWebTestTask

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: broker.py  error.py  index.py  logger.py  models.py  settings.py  tasks.py  worker.py
